<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1" />

    <RadioGroup
        android:id="@+id/rgBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView">

        <RadioButton
            android:id="@+id/rbBenz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benz" />

        <RadioButton
            android:id="@+id/rbBmw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmw" />

        <RadioButton
            android:id="@+id/rbAudi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audi" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgBrand"
        android:text="@string/question2" />

    <CheckBox
        android:id="@+id/cbJapan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:checked="false"
        android:text="@string/japan" />

    <CheckBox
        android:id="@+id/cbGermany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cbJapan"
        android:text="@string/germany" />

    <CheckBox
        android:id="@+id/cbFrance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cbGermany"
        android:text="@string/france" />

    <ToggleButton
        android:id="@+id/tbVibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cbFrance"
        android:textOff="@string/vibrate_off"
        android:textOn="@string/vibrate_on"
        android:onClick="onToggleButtonClick"/>

    <Switch
        android:id="@+id/switchPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tbVibrate"
        android:text="@string/power"
        android:textOn="@string/switch_on"
        android:textOff="@string/switch_off"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tvResult"
        android:layout_below="@+id/switchPower"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:background="#a4d3ee"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSubmit"
        android:id="@+id/btnSubmit"
        android:layout_below="@+id/cbJapan"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:onClick="onBtnSubmitClick" />

</RelativeLayout>

